--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -25,27 +24,71 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #b8b8b8;
+
 }
 
 h1 {
   font-size: 1.2em;
   line-height: 1.1;
 }
+
 .app--container{
   display: flex;
   flex-direction: column;
-  justify-content: space-around ;
+  justify-content: space-between ;
   align-items:center ;
-  border: .125rem solid blue;
+
   height: 800px;
   width: 360px;
-}
+  
+  background-color: #f0f0f0;
+  
+  border-radius: 20px;
+  overflow:hidden;
 
+}
+.main--name{
+  margin-bottom: 40px;
+}
+.main--company, .main--profession {
+  margin: 0;
+  font-size: 14px;
+}
+.main--company{
+  font-size: 12px;
+  padding-top: 3px;
+  font-style: italic;
+}
+.about--container, .main--container{
+  width: 100%;
+  height: 350px;
+}
 .about--container{
-  width: 90%;
-  border: .125rem solid red ;
+  margin-top: 60px;
+}
+.about--container > *,.main--container > *{
+  padding-left: 25px;
+}
+.main--logo{
+  font-size: 24px;
+  font-weight: 700;
+  padding-left: 30px;
+  color: rgb(120, 227, 189);
 }
 .about--title{
   font-size: 18px;
-  text-align: left;
+  font-weight: 700;
+  padding-top: 50px;
+  margin: 0;
+}
+.about--description{
+  font-size: 12px;
+  padding-right: 50px;
+  line-height: 22px;
+}
+.contact--container{
+  width: 100%;
+  height: 280px;
+  background-color: white;
 }
