--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #134846;
   text-decoration: inherit;
 }
 a:hover {
@@ -51,22 +51,24 @@ h1 {
 }
 .main--name{
   margin-bottom: 35px;
-  color: rgb(58, 58, 58);
+  color: rgb(255, 255, 255);
   font-size: 32px;
 }
 
 .main--company, .main--profession {
   margin: 0;
   font-size: 14px;
-  color: rgb(96, 96, 96);
+  color: rgb(1, 64, 61);
 }
 .main--profession{
-  font-size: 22px;
+  font-size: 32px;
 }
 .main--company{
-  font-size: 12px;
+  font-size: 20px;
   padding-top: 3px;
   font-style: italic;
+  color: gainsboro;
+
 }
 .about--container, .main--container{
   width: 100%;
@@ -82,27 +84,51 @@ h1 {
   font-size: 24px;
   font-weight: 700;
   padding-left: 30px;
-  color: rgba(0, 80, 102, 0.667);
+  color: #ffffff;
+
 }
 .about--title{
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
   padding-top: 50px;
   margin: 0;
 }
 .about--description{
-  font-size: 12px;
+  font-size: 16px;
   padding-right: 50px;
   line-height: 22px;
 }
 .contact--container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 280px;
   background-color: white;
 }
 .contact--list--container{
   list-style: none;
+  width: 90%;
 }
-.contact--list--container > li{
+.link--container{
+  display: flex;
+  align-items: center;
+  gap: 9px;
+  padding: 9px;
+}
+.list--icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 1px solid rgba(130, 235, 188, 0.589);
+  background-color: #7affb6;
+  width: 32px;
+  height: 32px;
   padding: 5px;
+  border-radius: 50%;
+  
+}
+.list--text{
+  font-size: 16px;
 }
